# cmake-cpp-template

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  vcpkg.json
.github/workflows/: ci.yml
cmake/: setup.cmake
misc/: boostut.cpp  stdmodule.cpp  ut2.cpp
modules/: mymodule.cppm
src/: main.cpp  mymodule.cpp
test/: CMakeLists.txt  test_main.cpp  test_mymodule.cpp
test/modules/: test_mymodule.cppm
test/src/: test_main.cpp
